deploy/k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: prometheus-operator
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: prometheus-operator
    app.kubernetes.io/name: grafana
  ports:
    - name: service
      protocol: TCP
      port: 80
      targetPort: 3000
