deploy/k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: tournmgmt-service
  namespace: tournmgmnt
  labels:
    app: tournmgmnt
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 6070
      name: http
  selector:
    app: tournmgmnt
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tournmgmnt-ingress
  namespace: tournmgmnt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - tournmgmt.eve.toys
      secretName: tournmgmnt-tls
  rules:
    - host: tournmgmt.eve.toys
      http:
        paths:
          - path: /
            backend:
              serviceName: tournmgmt-service
              servicePort: 6070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tournmgmt
  namespace: tournmgmt
  labels:
    app: tournmgmt
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: tournmgmt
  template:
    metadata:
      labels:
        app: tournmgmt
    spec:
      containers:
        - name: tournmgmt
          #          image: giraffeostrich/noodle:latest
          image: docker.pkg.github.com/eve-gatt/tournament-mgmt/tournmgmt:1.<VERSION>
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 6070
              path: /ping
            initialDelaySeconds: 30
            periodSeconds: 1
          livenessProbe:
            httpGet:
              port: 6070
              path: /ping
            periodSeconds: 5
            initialDelaySeconds: 10
          ports:
            - containerPort: 6070
              name: app
      imagePullSecrets:
        - name: regcred
